<resources>
    <string name="app_name">Trip Plan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_title_text">Welcome to TripPlanner application,\nwe\'re here to upgrade your travels level.\n<b>Please, choose the correct option</b></string>
    <string name="trip_planner">Trip Planner</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="please_provide_basic_information_nabout_yourself_and_password_that_s_nconsist_of_8_signs_1_special_sign_nand_1_big_letter">Please, provide basic information\nabout yourself and password that\'s\nconsist of 8 signs, 1 special sign\nand 1 big letter</string>
    <string name="let_s_start_your_nregistration_process">Let\'s start your\nregistration process</string>
    <string name="trip_details_title">Trip details</string>
    <string name="temporary_closed_text">Our team\'s currently hardworking\non this feature. See you in nearest future</string>
    <string name="login_title">Welcome, login to start\nnew unbelievable trip</string>
    <string name="theme">Theme</string>
    <string name="theme_setting_description">(Please, drag the icon to change application theme)</string>
    <string name="moje_dane">Account information:</string>
    <string name="change_password_btn">Change password</string>
    <string name="login_description_tv">Please, enter your email and password to login:</string>
    <string name="dialog_text_btn">Start the journey</string>
    <string name="empty_current_trip_description">Please, choose one from the list\nto start unbelievable journey</string>
    <string name="empty_current_trip_title">Currently you don\'t have active trip</string>
    <string name="current_trip_title">Trip details</string>
    <string name="success_trip_text">Surprise, surprise. You started your first trip. If you want to pick another one, please, end the current trip.</string>
    <string name="note_trip_text">Hey, to start your journey just click the button, and journey automatically will be started</string>
    <string name="error_trip_text">Ohhhh…we are sorry, but something went wrong</string>
    <string name="information_text">Information</string>
    <string name="dialog_permission_title">Permission</string>
    <string name="dialog_permission_default_message">Please, allow this application to use location permission</string>
    <string name="dialog_permission_button_positive">OK</string>
</resources>