<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragments.RegisterFragment">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fourth_margin"
            android:lineSpacingExtra="@dimen/first_margin"
            android:text="@string/let_s_start_your_nregistration_process"
            android:textAlignment="textStart"
            android:textColor="@color/base_color_3"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fourth_margin"
            android:layout_marginTop="@dimen/second_margin"
            android:lineSpacingExtra="@dimen/first_margin"
            android:text="@string/please_provide_basic_information_nabout_yourself_and_password_that_s_nconsist_of_8_signs_1_special_sign_nand_1_big_letter"
            android:textAlignment="textStart"
            android:textColor="@color/base_color_3"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/RoundedEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fourth_margin"
            android:layout_marginTop="12dp"
            android:hint="@string/name"
            app:errorEnabled="true"
            app:hintTextColor="@color/base_color_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_description_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surname_layout"
            style="@style/RoundedEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fourth_margin"
            android:layout_marginTop="@dimen/second_margin"
            android:hint="@string/surname"
            app:errorEnabled="true"
            app:hintTextColor="@color/base_color_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surnname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_layout"
            style="@style/RoundedEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fourth_margin"
            android:layout_marginTop="@dimen/second_margin"
            android:hint="@string/login"
            app:errorEnabled="true"
            app:hintTextColor="@color/base_color_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/surname_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/RoundedEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fourth_margin"
            android:layout_marginTop="@dimen/second_margin"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:hintTextColor="@color/base_color_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/RoundedEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fourth_margin"
            android:layout_marginTop="@dimen/second_margin"
            android:hint="@string/password"
            app:errorEnabled="true"
            app:hintTextColor="@color/base_color_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirm_button"
            style="@style/DefaultButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/fourth_margin"
            android:background="@drawable/default_app_round_button"
            android:elevation="8dp"
            android:fontFamily="@font/baloo_bold"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="14sp"
            app:elevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/password_layout"
            app:layout_constraintStart_toStartOf="@id/title_tv"
            app:layout_constraintTop_toBottomOf="@id/password_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>