<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.fragments.RegisterFragment">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fourth_margin"
            android:lineSpacingExtra="@dimen/first_margin"
            android:text="@string/login_title"
            android:textAlignment="textStart"
            android:textColor="@color/base_color_3"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fourth_margin"
            android:layout_marginTop="@dimen/second_margin"
            android:lineSpacingExtra="@dimen/first_margin"
            android:text="@string/login_description_tv"
            android:textAlignment="textStart"
            android:textColor="@color/base_color_3"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/RoundedEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fourth_margin"
            android:layout_marginTop="@dimen/second_margin"
            app:errorEnabled="true"
            app:errorIconTint="@color/white"
            android:hint="@string/email"
            app:hintTextColor="@color/base_color_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_description_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                style="@style/RoundedEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/RoundedEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fourth_margin"
            android:layout_marginTop="@dimen/second_margin"
            android:hint="@string/password"
            app:errorEnabled="true"
            app:errorIconTint="@color/white"
            app:hintTextColor="@color/base_color_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_layout"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_in_btn"
            style="@style/DefaultButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fourth_margin"
            android:background="@drawable/default_app_round_button"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="14sp"
            app:elevation="8dp"
            app:layout_constraintEnd_toEndOf="@id/password_layout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/password_layout"
            app:layout_constraintTop_toBottomOf="@id/password_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>